@@ -1,3 +1,10 @@
+2012-08-24  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/ilp32/ilp32.exp: Skip Solaris.
+	* gas/i386/ilp32/cfi/ilp32.exp: Likewise.
+	* gas/i386/ilp32/elf/ilp32.exp: Likewise.
+	* gas/i386/ilp32/lns/ilp32.exp: Likewise.
+
 2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
 	* gas/arm/armv8-a+crypto.s: Update testcase.
